--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   carousel_slider: ^4.0.0
   font_awesome_flutter: ^9.2.0
   timeline_tile: ^2.0.0
+  flutter_overlay_loader: ^1.0.3
   dio: ^4.0.4
   flutter_secure_storage: ^5.0.2
   
