Profile Page update completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   flutter_overlay_loader: ^1.0.3
   dio: ^4.0.4
   flutter_secure_storage: ^5.0.2
-  
+  image_picker: ^0.8.4+10 #IOS setup need to check
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
