--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^4.0.4
   flutter_secure_storage: ^5.0.2
   image_picker: ^0.8.4+10 #IOS setup need to check
+  url_launcher: ^6.0.20 #IOS setup need to check
 
 dev_dependencies:
   flutter_test:
